--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-quill": "^2.0.0"
   },
   "devDependencies": {
+    "@types/node": "^24.5.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
